<resources>
    <string name="app_name">CP</string>
    <string name="createBTN">Добавить</string>
    <string name="readBTN">Прочитать</string>
    <string name="numTXT">Number</string>
    <string name="IdTXT">ID</string>
    <string name="nameTXT">Name</string>
    <!--register layout-->
    <string name="loginTXT">Логин</string>
    <string name="emailTXT">Email</string>
    <string name="pasTXT">Пароль</string>
    <string name="title_activity_register">RegisterActivity</string>
    <!--    shop lables-->
    <string name="group">Группа</string>
    <string name="brand">Бренд</string>
    <string name="catNum">КатНомер</string>
    <string name="NameItemTXT">Наименование</string>
    <string name="QuantityItemTXT">Доступно</string>
    <string name="PriceItemTXT">Цена</string>
    <string name="shop">Магазин</string>
    <string name="quantityItemTXT">Введите количество</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="OK">OK</string>
    <string name="basket">Корзина</string>
    <string name="QuantityNum">Кол-во</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="filter">Фильтр</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_navigation">NavigationActivity</string>
</resources>